Replacing Saltboot or saltboot with attribute for uniformity (#2382)
* Replacing Saltboot or saltboot with attribute for uniformity.

* Cont.

* Cont.

* Cont.

--- a/modules/retail/pages/dedicated-with-scripts.adoc
+++ b/modules/retail/pages/dedicated-with-scripts.adoc
@@ -13,7 +13,7 @@ In this example we consider architecture with dedicated network for POS terminal
 
 For dedicated network we assume 192.168.86.0/24 network.
 
-In this example we provide [systemitem]``salt`` and [systemitem]``ftp`` CNAMEs for saltboot service discovery.
+In this example we provide [systemitem]``salt`` and [systemitem]``ftp`` CNAMEs for {saltboot} service discovery.
 
 We assume to have one regular branch server with salt minion id [systemitem]``branch1.mystore.com``, which is equal to the branch server fully qualified domain name, and branch id [systemitem]``B0001``.
 
@@ -93,7 +93,7 @@ Follow xref:reference:systems/system-groups.adoc[] to create [systemitem]``HWTyp
 
 Partitioning is specific to the hardware type and configured using [systemitem]``Saltboot`` formula.
 
-.Procedure: Assign Saltboot formula to hardware type group
+.Procedure: Assign {saltboot} formula to hardware type group
 
 . Navigate to menu:Systems[System Groups]
 . Select group [systemitem]``HWType:TerminalOEM-T1000``, which is our hardware type group
@@ -102,9 +102,9 @@ Partitioning is specific to the hardware type and configured using [systemitem]`
 . In displayed list select [systemitem]``Saltboot``
 . Save assigned formulas by clicking btn:[Save] in top right corner
 
-.Procedure: Configure Saltboot formula
+.Procedure: Configure {saltboot} formula
 
-. Select Saltboot formula from [systemitem]``HWType:TerminalOEM-T1000`` group formula list
+. Select {saltboot} formula from [systemitem]``HWType:TerminalOEM-T1000`` group formula list
 . Set [systemitem]``Disk Symbolic ID`` to [systemitem]``Disk1``
 . Set [systemitem]``Device Type`` to [systemitem]``DISK``
 . Set [systemitem]``Disk Device`` to [systemitem]``*``
