--- a/modules/retail/pages/retail-saltboot-diagram.adoc
+++ b/modules/retail/pages/retail-saltboot-diagram.adoc
@@ -1,7 +1,7 @@
 [[retail.saltboot.diagram]]
-= Terminal Boot Process (Saltboot Diagram)
+= Terminal Boot Process ({saltboot} Diagram)
 
-The saltboot process involves the {productname} Server, a terminal running the saltboot ``initrd``, and the branch server providing the saltboot services to the terminal.
+The {saltboot} process involves the {productname} Server, a terminal running the {saltboot} ``initrd``, and the branch server providing the {saltboot} services to the terminal.
 
 This sequence diagram explains how the three components interact with each other to boot a terminal.
 
