per feedback: contents of playbook dir

--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -31,7 +31,7 @@ Enabling this system type ensures that the ``ansible`` package is installed on t
 As the next step, configure the paths to your Ansible inventories and playbooks on the menu:System Details[Ansible > Control Node] page.
 As an inventory path, you can use the typical ansible inventory path [literal]``/etc/ansible/hosts``.
 As a playbook directory, you can use any directory on the control node, where your playbooks reside.
-A playbook directory either directly contains the [literal]``site.yml`` or contains subdirectories with this file.
+A playbook directory either contains [literal]``.yml`` files or subdirectories with [literal]``.yml`` files.
 
 
 
