--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -1,6 +1,5 @@
 [[retail.deploy.terminals]]
-= Deploy Terminals
-
+= Deployment basics
 
 When you have the {productname} Server and Branch Server set up, you are ready to deploy point-of-service terminals by following these steps:
 
@@ -27,9 +26,6 @@ For more information about building OS images, see xref:administration:image-man
 After you have registered new terminals, always check the {productname} {webui} to ensure your terminals have connected successfully to the branch server.
 The terminals must not have directly connected to the {productname} Server by mistake.
 ====
-
-
-
 
 == Create A Hardware Type Group
 
@@ -137,47 +133,10 @@ image::retail_imagesync_formula.png[scaledwidth=80%]
 When you have your bootstrap image ready, you can deploy the image to the terminals.
 
 
-
 .Procedure: Deploying Images to the Terminals
 
 . Power on your POS terminals.
 . The branch server will bootstrap the terminals according to the data you have provided.
-
-
-
-== Re-Deploy Images to the Terminals
-
-You can instruct terminals to download and deploy images when they are restarted.
-This is achieved using a Salt state.
-
-
-
-.Procedure: Forcing a Terminal to Re-Deploy Images
-. On the {productname} Server, at the command prompt, as root, apply this Salt state:
-+
-----
-salt $terminal_minion_id state.apply saltboot.force_redeploy
-----
-. Restart the terminal to pick up the changes.
-
-
-If your terminal encounters a problem with the file system or the partition table, you might need to remove the partition table and reformat the terminal.
-
-
-[WARNING]
-====
-Re-partitioning a terminal removes all data stored on the terminal hard disk, including any persistent partitions.
-====
-
-
-
-.Procedure: Forcing a Terminal to Re-partition the Hard Disk
-. On the {productname} Server, at the command prompt, as root, apply this Salt state:
-+
-----
-salt $terminal_minion_id state.apply saltboot.force_repartition
-----
-. Restart the terminal to pick up the changes.
 
 
 
