master - Adding new subchapter to Retail Guide (#2385)
* Adding new subchapter to Retail Guide.

* Cont.

* Cont.

* Cont.

--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -29,6 +29,7 @@ endif::[]
 *** xref:retail-deploy-terminals.adoc[Terminal Deployment Basics]
 *** xref:retail-deploy-terminals-other.adoc[USB and Wireless Deployments]
 *** xref:retail-deploy-terminals-auto.adoc[Deployments with Auto-Accept Keys]
+*** xref:retail-saltboot-redeployment.adoc[Forced image redeployment]
 *** xref:retail-saltboot-diagram.adoc[Terminal Boot Process]
 *** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-offline.adoc[Offline Use]
