Replacing Saltboot or saltboot with attribute for uniformity.

--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -40,8 +40,8 @@ While both of these terminals require similar processing and network functionali
 The OS images ensure that the different display mechanisms work correctly.
 
 {productname} {smr} supports POS terminals that boot using both BIOS and UEFI.
-For UEFI booting terminals, you will need to configure the EFI partition in the Saltboot formula.
-For more information on EFI in the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
+For UEFI booting terminals, you will need to configure the EFI partition in the {saltboot} formula.
+For more information on EFI in the {saltboot} formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 
 
@@ -76,7 +76,7 @@ The Branch ID is used in formulas and scripts to automatically update the entire
 Formulas are pre-written Salt states, that are used to configure your installation.
 
 You can use formulas to apply configuration patterns to your hardware groups.
-{productname} {smr} uses the Saltboot formula, which defines partitioning and OS images for terminals.
+{productname} {smr} uses the {saltboot} formula, which defines partitioning and OS images for terminals.
 
 You can use default settings for formulas, or edit them to make them more specific to your environment.
 
@@ -84,19 +84,19 @@ For more information about formulas, see xref:retail:retail-formulas-intro.adoc[
 
 
 
-=== Saltboot
+=== {saltboot}
 
-Saltboot is a collection of tools and processes that are used to bootstrap, deploy and validate {productname} {smr} terminals.
+{saltboot} is a collection of tools and processes that are used to bootstrap, deploy and validate {productname} {smr} terminals.
 
-Saltboot consists of:
+{saltboot} consists of:
 
 * Initialization:
 +
-The saltboot ``initrd`` is created during image building and is required for bootstrapping terminals.
+The {saltboot} ``initrd`` is created during image building and is required for bootstrapping terminals.
 
-* Saltboot state:
+* {saltboot} state:
 +
-The Salt state that contains the logic for the entire saltboot process.
+The Salt state that contains the logic for the entire {saltboot} process.
 
 * Partitioning pillars:
 +
@@ -104,9 +104,9 @@ The Salt pillar structure that describes how terminals are partitioned and what 
 
 * Images and boot images pillars:
 +
-When the image building feature in {productname} successfully builds an image that contains the saltboot ``initrd``, the image and boot image Salt pillars are created.
+When the image building feature in {productname} successfully builds an image that contains the {saltboot} ``initrd``, the image and boot image Salt pillars are created.
 
 
-The saltboot process involves the {productname} Server, a terminal running the saltboot ``initrd``, and the branch server providing the saltboot services to the terminal.
+The {saltboot} process involves the {productname} Server, a terminal running the {saltboot} ``initrd``, and the branch server providing the {saltboot} services to the terminal.
 
-For a detailed diagram explaining how the saltboot boot process works, see xref:retail:retail-saltboot-diagram.adoc[].
+For a detailed diagram explaining how the {saltboot} boot process works, see xref:retail:retail-saltboot-diagram.adoc[].
