--- a/modules/retail/pages/retail-deploy-terminals-other.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-other.adoc
@@ -51,8 +51,8 @@ dd bs=1M if=<usb image name> of=<path to usb device>
 
 
 When you have the image on the USB drive, check that the terminals you want to deploy allow local booting.
-You can check this by editing the Saltboot formula in the {productname} {smr} {webui}.
-For more information about the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
+You can check this by editing the {saltboot} formula in the {productname} {smr} {webui}.
+For more information about the {saltboot} formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 
 
@@ -122,8 +122,8 @@ WIRELESS_WPA_PSK=<wireless network password>
 echo ./etc/sysconfig/network/ifcfg-wlan0 | cpio -H newc -o | gzip >> /srv/saltboot/boot/initrd.gz
 ----
 . Check that the terminals you want to deploy allow local booting.
-  You can check this by editing the Saltboot formula in the {productname} {smr} {webui}.
-  For more information about the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
+  You can check this by editing the {saltboot} formula in the {productname} {smr} {webui}.
+  For more information about the {saltboot} formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 
 
@@ -193,7 +193,7 @@ Then you can specify a second Salt state with the wireless details for use durin
 
 .Procedure: Using Different Wireless Credentials for Production Network
 . Write a custom Salt state named ``/srv/salt/saltboot_hook.sls`` containing the wireless details for normal operation.
-    This Salt state is applied by Saltboot after the system image is deployed.
+    This Salt state is applied by {saltboot} after the system image is deployed.
 +
 ----
 {% set root = salt['environ.get']('NEWROOT') %}
