--- a/modules/specialized-guides/pages/salt/salt-formula-pxe.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-pxe.adoc
@@ -16,15 +16,15 @@ The PXE formula is used to configure PXE booting on the branch server.
 * In the [guimenu]``Initrd Filename for ARM64`` field, keep the default value.
 * In the [guimenu]``Kernel Command Line Parameters`` field, keep the default value.
   For more information about possible values, see <<retail.sect.formulas.pxe.kernelparams>>.
-* In the [guimenu]``PXE root directory`` field, enter the path to the saltboot directory (for example, [systemitem]``/srv/saltboot``).
+* In the [guimenu]``PXE root directory`` field, enter the path to the {saltboot} directory (for example, [systemitem]``/srv/saltboot``).
 . Click [btn]``Save Formula`` to save your configuration.
 . Apply the highstate.
 
 
 
 [[retail.sect.formulas.pxe.kernelparams]]
-== Saltboot Kernel Command Line Parameters
-Saltboot supports common kernel parameters and saltboot-specific kernel parameters.
+== {saltboot} Kernel Command Line Parameters
+{saltboot} supports common kernel parameters and {saltboot}-specific kernel parameters.
 All the parameters can be entered in the [guimenu]``Kernel Command Line Parameters`` field of the PXE formula.
 
 [systemitem]``kiwidebug=1``::
@@ -44,7 +44,7 @@ MASTER=myproxy.domain.com
 ----
 
 [systemitem]``SALT_TIMEOUT``::
-Overrides the local boot fallback timeout if the Salt master does not apply the saltboot state within this timeout (default: 60 seconds).
+Overrides the local boot fallback timeout if the Salt master does not apply the {saltboot} state within this timeout (default: 60 seconds).
 For example:
 +
 ----
