--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -4,7 +4,7 @@
 When you have the {productname} Server and Branch Server set up, you are ready to deploy point-of-service terminals by following these steps:
 
 . Create hardware type groups
-. Assign and configure the Saltboot formula for each hardware type group
+. Assign and configure the {saltboot} formula for each hardware type group
 . Synchronize images to the branch server
 . Deploy images to the terminals
 
@@ -18,7 +18,7 @@ For earlier versions, terminals must be {x86} architecture only.
 If you have many terminals, you can handle them with a script.
 For more information, see xref:retail:retail-mass-config.adoc[].
 
-Before terminals can be deployed, ensure you have prepared a Saltboot-based operating system image.
+Before terminals can be deployed, ensure you have prepared a {saltboot}-based operating system image.
 For more information about building OS images, see xref:administration:image-management.adoc[].
 
 [IMPORTANT]
@@ -32,7 +32,7 @@ The terminals must not have directly connected to the {productname} Server by mi
 Each terminal requires a specific hardware type, which contains information about the product name and terminal manufacturer.
 However, at the beginning, the {productname} database does not have this information.
 To tell {productname} what image to deploy on each terminal, you can set hardware type groups.
-After you have created a new hardware type group, you can apply the Saltboot formula to the group and configure it for your environment.
+After you have created a new hardware type group, you can apply the {saltboot} formula to the group and configure it for your environment.
 
 Hardware types allow you to group devices according to manufacturer and device name.
 Then, all devices of a particular type can be managed as one.
@@ -64,17 +64,17 @@ Spaces and other non-alphanumeric characters will be removed when the name is pr
 
 
 
-== Assign and Configure the Saltboot Formula for Each Hardware Type Group
+== Assign and Configure the {saltboot} Formula for Each Hardware Type Group
 
-Each hardware type group must have the Saltboot formula applied.
+Each hardware type group must have the {saltboot} formula applied.
 
-.Procedure: Assigning the Saltboot Formula
+.Procedure: Assigning the {saltboot} Formula
 
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
-. Select the Saltboot formula and click btn:[Save].
+. Select the {saltboot} formula and click btn:[Save].
 . Navigate to the menu:Formulas[Saltboot] tab.
-. Configure the Saltboot formula.
-  For more information about the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
+. Configure the {saltboot} formula.
+  For more information about the {saltboot} formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 
 
@@ -153,7 +153,7 @@ Two Salt pillars allow you to change the protocol and server used to download th
 
 
 
-.Example: Changing the Saltboot Image Download Protocol
+.Example: Changing the {saltboot} Image Download Protocol
 This example changes the protocol used for all terminals.
 
 Edit the ``/srv/pillar/top.sls`` file:
@@ -173,7 +173,7 @@ saltboot_download_protocol: http
 
 
 
-.Example: Changing the Saltboot Image Download Location
+.Example: Changing the {saltboot} Image Download Location
 This example changes the download location for all terminals on a specified branch server.
 
 Edit the ``/srv/pillar/top.sls`` file:
