--- a/modules/retail/pages/retail-uyuni-server-setup.adoc
+++ b/modules/retail/pages/retail-uyuni-server-setup.adoc
@@ -152,7 +152,7 @@ feature without support.
 Then it is possible to build the image using modified kiwi profile and deploy it to terminal as usual (there is
 nothing specific for Uuyni).
 
-The rest of things (saltboot formula and formula for image syncing works just the same way as SUMA.)
+The rest of things ({saltboot} formula and formula for image syncing works just the same way as SUMA.)
 
 Only thing that behaves differently is naming of terminals, for some reason dashes are used instead of
 HWTYPE (for example). But fortunately it has no impact on (at least basic) functionality of terminal.
