--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -108,7 +108,9 @@ Once created, it is available for repeated use.
 After terminal finishes booting, {saltboot} redeployment setting is automatically reset to prevent repeated redeployment.
 ====
 
-An API call [systemitem]``system.setPillar`` can be used to set specific saltboot options through {salt} pillar data. {productname} {saltboot} integration is using [systemitem]``tuning-saltboot`` pillar category to manage {saltboot} tuning, including forced redeployment or disk repartition. Using this pillar category allows {productname} to reset {saltboot} flag once terminal is booted up.
+An API call [systemitem]``system.setPillar`` can be used to set specific {saltboot} options through {salt} pillar data. 
+{productname} {saltboot} integration is using [systemitem]``tuning-saltboot`` pillar category to manage {saltboot} tuning, including forced redeployment or disk repartition. 
+Using this pillar category allows {productname} to reset {saltboot} flag once the terminal is booted up.
 
 .Procedure: Forcing a {saltboot} to redeploy image using API call using spacecmd command
 . In the console run following command, replace [systemitem]``$terminal_minion_id`` with actual terminal minion id:
