--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -113,7 +113,7 @@ An API call [systemitem]``system.setPillar`` can be used to set specific {saltbo
 Using this pillar category allows {productname} to reset {saltboot} flag once the terminal is booted up.
 
 .Procedure: Forcing a {saltboot} to redeploy image using API call using spacecmd command
-. In the console run following command, replace [systemitem]``$terminal_minion_id`` with actual terminal minion id:
+. In the console run following the command, and replace [systemitem]``$terminal_minion_id`` with the actual terminal minion id:
 +
 ----
 spacecmd api -- -A '$terminal_minion_id,tuning-saltboot,{"saltboot": {"force_redeployment": "True"}}' system.setPillar
