--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -112,7 +112,7 @@ An API call [systemitem]``system.setPillar`` can be used to set specific {saltbo
 {productname} {saltboot} integration is using [systemitem]``tuning-saltboot`` pillar category to manage {saltboot} tuning, including forced redeployment or disk repartition. 
 Using this pillar category allows {productname} to reset {saltboot} flag once the terminal is booted up.
 
-.Procedure: Forcing a {saltboot} to redeploy image using API call using spacecmd command
+.Procedure: Forcing {saltboot} to redeploy image using API call using spacecmd command
 . In the console run following the command, and replace [systemitem]``$terminal_minion_id`` with the actual terminal minion id:
 +
 ----
