--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -119,7 +119,7 @@ Using this pillar category allows {productname} to reset {saltboot} flag once th
 spacecmd api -- -A '$terminal_minion_id,tuning-saltboot,{"saltboot": {"force_redeployment": "True"}}' system.setPillar
 ----
 
-.Procedure: Forcing a {saltboot} to repartition disk using API call using spacecmd command
+.Procedure: Forcing {saltboot} to repartition disk using API call using spacecmd command
 . In the console run following command, replace [systemitem]``$terminal_minion_id`` with actual terminal minion id:
 +
 ----
