--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -120,7 +120,7 @@ spacecmd api -- -A '$terminal_minion_id,tuning-saltboot,{"saltboot": {"force_red
 ----
 
 .Procedure: Forcing {saltboot} to repartition disk using API call using spacecmd command
-. In the console run following command, replace [systemitem]``$terminal_minion_id`` with actual terminal minion id:
+. In the console run the following command, replace [systemitem]``$terminal_minion_id`` with the actual terminal minion id:
 +
 ----
 spacecmd api -- -A '$terminal_minion_id,tuning-saltboot,{"saltboot": {"force_repartition": "True"}}' system.setPillar
