--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -166,7 +166,7 @@ base:
 If your terminal encounters a problem with the file system or the partition table, you might need to remove the partition table and reformat the terminal.
 
 .Procedure: Force {saltboot} to repartition disk using {saltboot} pillar
-. Create new file named ``/srv/salt/pillar/force_repartition.sls`` with content:
+. Create new file [filename]``/srv/salt/pillar/force_repartition.sls`` with content:
 +
 ----
 saltboot:
