--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -182,4 +182,4 @@ base:
 ----
 +
 . Reboot the terminal to pick up the changes.
-. After terminal finishes booting, remove modifications done in ``/srv/salt/pillar/top.sls`` file.
+. After the terminal finishes booting, remove modifications made in [filename]``/srv/salt/pillar/top.sls`` file.
