--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -127,7 +127,7 @@ spacecmd api -- -A '$terminal_minion_id,tuning-saltboot,{"saltboot": {"force_rep
 ----
 
 .Procedure: Check {saltboot} tuning options
-. In the console run following command, replace [systemitem]``$terminal_minion_id`` with actual terminal minion id:
+. In the console run the following command, and replace [systemitem]``$terminal_minion_id`` with the actual terminal minion id:
 +
 ----
 spacecmd api -- -A '$terminal_minion_id,tuning-saltboot' system.getPillar
