--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -144,7 +144,8 @@ Make sure to use [systemitem]``tuning-saltboot`` as pillar category in the API c
 
 [WARNING]
 ====
-Pillars specified outside of {productname} database cannot be reset automatically. Without manual intervention, terminal will download new image on each reboot.
+Pillars specified outside of {productname} database cannot be reset automatically. 
+Without manual intervention, the terminal will download a new image on each reboot.
 ====
 
 .Procedure: Force a {saltboot} to redeploy image using {saltboot} pillar
