--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -149,7 +149,7 @@ Without manual intervention, the terminal will download a new image on each rebo
 ====
 
 .Procedure: Force a {saltboot} to redeploy image using {saltboot} pillar
-. Create new file named ``/srv/salt/pillar/force_redeploy.sls`` with content:
+. Create new file [filename]``/srv/salt/pillar/force_redeploy.sls`` with content:
 +
 ----
 saltboot:
