--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -164,7 +164,7 @@ base:
     - force_redeploy
 ----
 . Reboot the terminal to pick up the changes.
-. After terminal finishes booting, remove modifications done in ``/srv/salt/pillar/top.sls`` file.
+. After the terminal finishes booting, remove modifications made in [filename]``/srv/salt/pillar/top.sls`` file.
 
 If your terminal encounters a problem with the file system or the partition table, you might need to remove the partition table and reformat the terminal.
 
