--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -3,7 +3,7 @@
 
 == Deploying New Images
 
-Objective: Deploy a new image on selected terminals first, test it, and then deploy it to all terminals.
+This file describes how to deploy a new image on selected terminals first, test it, and then deploy it to all terminals.
 
 The hardware type (HWTYPE) group is used for booting new terminals, while already deployed terminals can
 be moved to any group that provides the Saltboot formula. This flexibility allows for testing new images
