--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -6,7 +6,8 @@
 This file describes how to deploy a new image on selected terminals first, test it, and then deploy it to all terminals.
 
 The hardware type (HWTYPE) group is used for booting new terminals, while already deployed terminals can
-be moved to any group that provides the Saltboot formula. This flexibility allows for testing new images
+be moved to any group that provides the {saltboot} formula. 
+This flexibility allows for testing of new images
 or configurations. Follow these steps to ensure a smooth deployment process:
 
 * Build New Image
