--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -8,7 +8,8 @@ This file describes how to deploy a new image on selected terminals first, test 
 The hardware type (HWTYPE) group is used for booting new terminals, while already deployed terminals can
 be moved to any group that provides the {saltboot} formula. 
 This flexibility allows for testing of new images
-or configurations. Follow these steps to ensure a smooth deployment process:
+or configurations. 
+To ensure a smooth deployment, follow these steps:
 
 * Build New Image
 
