--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -17,7 +17,7 @@ To ensure a smooth deployment, follow these steps:
 
 * Create a Test Group
 
-  * Name the group, for example, "TEST:POSVendor-Terminal". Name can be chosen freely.
+  * Name the group, for example, [literal]``TEST:POSVendor-Terminal``. The name can be chosen freely.
   * Add the Saltboot formula to this group, replicating the configuration from the original HWTYPE group, except for the image version. Use the name and version of the new image.
 
 * Move Selected Terminals
