--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -23,7 +23,7 @@ To ensure a smooth deployment, follow these steps:
 * Move Selected Terminals
 
   * Identify the terminals you want to test the new image on.
-  * Transfer these terminals from the HWTYPE:POSVendor-Terminal group to the newly created TEST:POSVendor-Terminal group. It is recommended to use System Set Manager for this task.
+  * Transfer these terminals from the group [literal]``HWTYPE:POSVendor-Terminal`` group to the newly created group [literal]``TEST:POSVendor-Terminal``. It is recommended to use System Set Manager for this task.
 
 * Reboot Terminals
 
