--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -31,7 +31,7 @@ To ensure a smooth deployment, follow these steps:
 
 * Verify and Evaluate
 
-  * Monitor the terminals in the TEST:POSVendor-Terminal group.
+  * Monitor the terminals in the [literal]``TEST:POSVendor-Terminal`` group.
   * Check if the new image performs as expected and if there are any issues or errors encountered.
 
 * Update HWTYPE Group
