--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -36,7 +36,7 @@ To ensure a smooth deployment, follow these steps:
 
 * Update HWTYPE Group
 
-  * Once you have confirmed that the new image works correctly, it's time to update the HWTYPE group.
+  * Once you have confirmed that the new image works correctly, the [literal]``HWTYPE`` group can be updated.
   * Modify the image version in the HWTYPE:POSVendor-Terminal group to match the tested and approved version.
   * This ensures that all other terminals receive the new image.
 
