--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -37,7 +37,7 @@ To ensure a smooth deployment, follow these steps:
 * Update HWTYPE Group
 
   * Once you have confirmed that the new image works correctly, the [literal]``HWTYPE`` group can be updated.
-  * Modify the image version in the HWTYPE:POSVendor-Terminal group to match the tested and approved version.
+  * Modify the image version in the [literal]``HWTYPE:POSVendor-Terminal`` group to match the tested and approved version.
   * This ensures that all other terminals receive the new image.
 
 
