--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -43,7 +43,7 @@ To ensure a smooth deployment, follow these steps:
 
 === Controlling Image Versions
 
-By default, saltboot formula selects the specified image name and version, or selects the highest one if version is not specified.
+By default, {saltboot} formula selects the specified image name and version or selects the highest one if the version is not specified.
 
 There are multiple methods to control the image version within the HWTYPE and TEST groups:
 
