--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -49,7 +49,7 @@ There are multiple methods to control the image version within the HWTYPE and TE
 
 * Specify Exact Version
 
-  * In both the HWTYPE and TEST groups, explicitly specify the exact version of the image to be deployed.
+  * In both the HWTYPE and TEST groups, specify explicitly the exact version of the image to be deployed.
   * Make sure that the specified image version is already synchronized.
 
 * Mark New Image as ``Inactive``
