--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -52,7 +52,7 @@ There are multiple methods to control the image version within the HWTYPE and TE
   * In both the HWTYPE and TEST groups, specify explicitly the exact version of the image to be deployed.
   * Make sure that the specified image version is already synchronized.
 
-* Mark New Image as ``Inactive``
+* Mark New Image as [literal]``Inactive``
 
   * In the HWTYPE group, do not specify the image version.
   * Mark the new image as ``inactive`` after building and before synchronizing it to Branch Server.
