--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -60,7 +60,7 @@ There are multiple methods to control the image version within the HWTYPE and TE
   * After testing, remove the [literal]``Inactive`` flag so the image can be auto-selected in the HWTYPE group.
   * The [literal]``Inactive`` flag can be accessed through the API. For more information, see xref:retail-image-pillar.adoc[Image Pillar].
 
-*  Utilize ``Freeze Image`` Flag:
+*  Utilize [literal]``Freeze Image`` flag:
 
   * In the HWTYPE group, omit the image version
   * Before synchronizing the new image, set the ``Freeze Image`` flag in Saltboot Formula in HWTYPE group. This ensures that the already deployed terminals in this group will keep the old image.
