--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -64,7 +64,7 @@ There are multiple methods to control the image version within the HWTYPE and TE
 
   * In the HWTYPE group, omit the image version.
   * Before synchronizing the new image, set the ``Freeze Image`` flag in Saltboot Formula in HWTYPE group. This ensures that the already deployed terminals in this group will keep the old image.
-  * Synchronize and test the new image in the TEST group
+  * Synchronize and test the new image in the TEST group.
   * Reset the ``Freeze Image`` flag in HWTYPE group, so the terminals in this group will be updated to the new image too.
 
 [WARNING]
