--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -69,6 +69,7 @@ There are multiple methods to control the image version within the HWTYPE and TE
 
 [WARNING]
 ====
-Do not use the whitelist in Image Sync formula to control which terminal boots which image. It does not provide the required granularity and does not work with containerized Branch Server.
+Do not use the whitelist in Image Sync formula to control which terminal boots which image. 
+It does not provide the required granularity and does not work with containerized Branch Server.
 ====
 
