--- a/modules/retail/pages/retail-image-pillar.adoc
+++ b/modules/retail/pages/retail-image-pillar.adoc
@@ -1,7 +1,7 @@
 [[retail-image-pillar]]
 = Image Pillar
 
-If the built image type is `PXE`, a Salt pillar is also generated.
+If the built image type is [literal]``PXE``, a {salt} pillar is also generated.
 Image pillars are stored in the database and the Salt subsystem can access details about the generated image.
 Details include where the image files are located and provided, image checksums, information needed for network boot, and more.
 
