--- a/modules/retail/pages/retail-image-pillar.adoc
+++ b/modules/retail/pages/retail-image-pillar.adoc
@@ -2,7 +2,7 @@
 = Image Pillar
 
 If the built image type is [literal]``PXE``, a {salt} pillar is also generated.
-Image pillars are stored in the database and the Salt subsystem can access details about the generated image.
+Image pillars are stored in the database and the {salt} subsystem can access details about the generated image.
 Details include where the image files are located and provided, image checksums, information needed for network boot, and more.
 
 The generated pillar is available to all connected clients.
