--- a/modules/retail/pages/retail-image-pillar.adoc
+++ b/modules/retail/pages/retail-image-pillar.adoc
@@ -59,7 +59,8 @@ This is an example of Image Pillar:
 }
 ----
 
-Under the ``images`` section, we have a specific image called ``POS_Image_JeOS7`` with a version of ``7.1.0-1.`` It provides various details
+Under the [literal]``Images`` section, there is a specific image called [literal]``POS_Image_JeOS7`` with a version [literal]``7.1.0-1.`` 
+It provides various details
 such as the image's URL for download, architecture, hash, size, synchronization information, image type (in this case, ``pxe``), file system type,
 file name, and an inactive flag to exclude it from auto-selection. Additionally, it references the corresponding boot image named ``POS_Image_JeOS7-7.1.0-1.``
 
