--- a/modules/retail/pages/retail-image-pillar.adoc
+++ b/modules/retail/pages/retail-image-pillar.adoc
@@ -62,7 +62,8 @@ This is an example of Image Pillar:
 Under the [literal]``Images`` section, there is a specific image called [literal]``POS_Image_JeOS7`` with a version [literal]``7.1.0-1.`` 
 It provides various details
 such as the image URL for download, architecture, hash, size, synchronization information, image type (in this case, [literal]``PXE``), file system type,
-file name, and an inactive flag to exclude it from auto-selection. Additionally, it references the corresponding boot image named ``POS_Image_JeOS7-7.1.0-1.``
+file name, and an inactive flag to exclude it from auto-selection. 
+Additionally, it references the corresponding boot image named [literal]``POS_Image_JeOS7-7.1.0-1.``
 
 The ``boot_images`` section contains information about the boot image ``POS_Image_JeOS7-7.1.0-1.`` It specifies the details about kernel and initrd.
 
