--- a/modules/retail/pages/retail-image-pillar.adoc
+++ b/modules/retail/pages/retail-image-pillar.adoc
@@ -65,7 +65,8 @@ such as the image URL for download, architecture, hash, size, synchronization in
 file name, and an inactive flag to exclude it from auto-selection. 
 Additionally, it references the corresponding boot image named [literal]``POS_Image_JeOS7-7.1.0-1.``
 
-The ``boot_images`` section contains information about the boot image ``POS_Image_JeOS7-7.1.0-1.`` It specifies the details about kernel and initrd.
+The [literal]``boot_images`` section contains information about the boot image [literal]``POS_Image_JeOS7-7.1.0-1.`` 
+It specifies the details about kernel and [path]``initrd``.
 
 Image pillar can be modified via API. 
 This example retrieves the image pillar for a given image ID, and changes the [literal]``Inactive`` flag to [literal]``True``
