--- a/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
@@ -1,16 +1,9 @@
 [[proxy-register]]
 = Proxy Registration
 
-Proxy systems are registered as Salt clients using bootstrap script or {webui}.
+Proxy systems are registered as {salt} clients using bootstrap script or {webui}.
 
 This procedure describes software channel setup and registering the installed proxy as the {productname} client, using an activation key.
-
-[IMPORTANT]
-====
-Before you can select the correct child channels while creating the activation key, ensure you have properly synchronized the openSUSE Leap channel with all the needed child channels and the {productname} Proxy channel.
-====
-
-
 
 [[proxy-register-procedure]]
 .Procedure: Registering the Proxy
@@ -28,22 +21,25 @@ opensuse_leap15_4-sle-updates \
 uyuni-proxy-stable-leap-154
 ----
 +
-
-Instead of [systemitem]``uyuni-proxy-stable-leap-154`` you can also try [systemitem]``uyuni-proxy-devel-leap`` that is the current development version.
+Instead of [systemitem]``uyuni-proxy-stable-leap-154`` you can also try [systemitem]``uyuni-proxy-devel-leap`` which is the current development version.
 +
-
-For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
+OM REMOVE: For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
 +
+[IMPORTANT]
+====
+Before you can select the correct child channels while creating the activation key, ensure you have properly synchronized the {opensuse} Leap channel with all the needed child channels and the {productname} Proxy channel.
+====
 
-. Create an activation key with openSUSE Leap as a base channel and the other channels as child channels. For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
+. Create an activation key with {opensuse} Leap as a base channel and the other channels as child channels. 
+  OM REMOVE: For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
 
-. Modify a bootstrap script for the proxy.
+. Create a bootstrap script for the proxy, and adjust it.
     Add the GPG key to the [systemitem]``ORG_GPG_KEY=`` parameter.
-    For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
-    For more information about bootstrap scripts, see xref:client-configuration:registration-bootstrap.adoc[].
+//    For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
+//    For more information about bootstrap scripts, see xref:client-configuration:registration-bootstrap.adoc[].
 
 . Bootstrap the client using the script.
-    For more information, see xref:client-configuration:registration-bootstrap.adoc[].
+    OM REMOVE: For more information, see xref:client-configuration:registration-bootstrap.adoc[].
 
 . Navigate to menu:Salt[Keys] and accept the key.
   When the key is accepted, the new proxy will show in menu:Systems[Overview] in the [guimenu]``Recently Registered Systems`` section.
